chore: added getVersion to API (with dummy value)
